// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Preloader /> it renders Preloader only after 250ms delay 1`] = `<Preloader />`;

exports[`<Preloader /> it renders Preloader only after 250ms delay 2`] = `
<Preloader>
  <div
    className="mfui-preloader mfui-preloader_color_default mfui-preloader_size-all_medium"
  >
    <div
      className="mfui-preloader__item mfui-preloader__item_first"
    />
    <div
      className="mfui-preloader__item mfui-preloader__item_second"
    />
    <div
      className="mfui-preloader__item mfui-preloader__item_third"
    />
  </div>
</Preloader>
`;

exports[`<Preloader /> it renders Preloader with black color 1`] = `
<Preloader
  color="black"
>
  <div
    className="mfui-preloader mfui-preloader_color_black mfui-preloader_size-all_medium"
  >
    <div
      className="mfui-preloader__item mfui-preloader__item_first"
    />
    <div
      className="mfui-preloader__item mfui-preloader__item_second"
    />
    <div
      className="mfui-preloader__item mfui-preloader__item_third"
    />
  </div>
</Preloader>
`;

exports[`<Preloader /> it renders Preloader with custom className 1`] = `
<Preloader
  className="test-class"
>
  <div
    className="mfui-preloader mfui-preloader_color_default mfui-preloader_size-all_medium test-class"
  >
    <div
      className="mfui-preloader__item mfui-preloader__item_first"
    />
    <div
      className="mfui-preloader__item mfui-preloader__item_second"
    />
    <div
      className="mfui-preloader__item mfui-preloader__item_third"
    />
  </div>
</Preloader>
`;

exports[`<Preloader /> it renders Preloader with small size 1`] = `
<Preloader
  sizeAll="small"
  sizeDesktop="small"
  sizeMobile="small"
  sizeTablet="small"
  sizeWide="small"
>
  <div
    className="mfui-preloader mfui-preloader_color_default mfui-preloader_size-all_small mfui-preloader_size-wide_small mfui-preloader_size-desktop_small mfui-preloader_size-tablet_small mfui-preloader_size-mobile_small"
  >
    <div
      className="mfui-preloader__item mfui-preloader__item_first"
    />
    <div
      className="mfui-preloader__item mfui-preloader__item_second"
    />
    <div
      className="mfui-preloader__item mfui-preloader__item_third"
    />
  </div>
</Preloader>
`;

exports[`<Preloader /> it renders Preloader with white color 1`] = `
<Preloader
  color="white"
>
  <div
    className="mfui-preloader mfui-preloader_color_white mfui-preloader_size-all_medium"
  >
    <div
      className="mfui-preloader__item mfui-preloader__item_first"
    />
    <div
      className="mfui-preloader__item mfui-preloader__item_second"
    />
    <div
      className="mfui-preloader__item mfui-preloader__item_third"
    />
  </div>
</Preloader>
`;
